# PQNodium

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/workflows/: audit.yml  build.yml  lint.yml  test.yml
doc/: AI_DECLARATION.md  CHANGELOG.md  README.md  REFERENCE.md  SECURITY.md
doc/api/: README.md  crypto_api.md  ipc_interface.md  message_format.md
doc/architecture/: README.md  module_boundary.md  protocol_stack.md  threat_model.md
doc/currentRisk/: README.md  phase0_risk.md  phase1_risk.md  phase2_risk.md  phase3_risk.md  phase3b_risk.md  phase4_risk.md  phase5_8_risk.md
doc/development/: CONTRIBUTING.md  README.md  coding_standards.md  git_workflow.md  pr_template.md
doc/releases/: release_process.md
doc/revelation/: README.md  zfeiq_retrospective.md
doc/start/: 01_origin_and_comparison.md  02_naming.md  03_technical_plan.md  README.md  v0.2.0_mls_research.md
pqnodium-cli/: Cargo.toml
pqnodium-cli/src/: main.rs  tui.rs
pqnodium-cli/src/tui/: command.rs  mod.rs  render.rs
pqnodium-core/: Cargo.toml
pqnodium-core/src/: crypto.rs  envelope.rs  identity.rs  lib.rs  message.rs  state.rs
pqnodium-core/src/crypto/backend/: mod.rs
pqnodium-core/src/crypto/backend/pqc/: chacha20.rs  ed25519.rs  ml_dsa.rs  ml_kem.rs  mod.rs  x25519.rs
pqnodium-core/src/crypto/hybrid/: hybrid_kem.rs  hybrid_sig.rs  mod.rs
pqnodium-core/src/crypto/traits/: aead.rs  kem.rs  mod.rs  sign.rs
pqnodium-core/src/group/: mod.rs  traits.rs  types.rs
pqnodium-core/src/group/lifecycle/: codec.rs  error.rs  manager.rs  mod.rs  state.rs  types.rs
pqnodium-core/src/group/sender_key/: chain.rs  error.rs  mod.rs
pqnodium-p2p/: Cargo.toml
pqnodium-p2p/src/: behaviour.rs  config.rs  error.rs  event.rs  group.rs  lib.rs  node.rs  transport.rs
pqnodium-p2p/tests/: eight_node_mesh.rs  gossipsub_messaging.rs  group_encryption.rs
scripts/: build.cmd  check.cmd  dev.cmd
scripts/linux/: build.sh  check.sh  dev.sh
scripts/win/: build.ps1  check.ps1  dev.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: generate_icons.py
src-tauri/src/: main.rs
web/: index.html
