[package]
name = "pqnodium-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
pqnodium-core = { path = "../pqnodium-core" }
pqnodium-p2p = { path = "../pqnodium-p2p" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
rand = "0.8"
anyhow = "1"
libp2p = { version = "0.55", features = ["quic"] }
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
