[package]
name = "pqnodium-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2"
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
ml-kem = "0.2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
crystals-dilithium = "2"
chacha20poly1305 = "0.10"
