[package]
name = "pqnodium-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
pqnodium-core = { path = "../pqnodium-core" }
libp2p = { version = "0.55", features = [
    "quic", "noise", "yamux", "kad", "identify", "mdns", "ping",
    "tokio", "ed25519", "serde", "macros",
] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
