[package]
name = "pqnodium-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
pqnodium-core = { path = "../pqnodium-core" }
libp2p = { version = "0.55", features = [
    "quic", "tcp", "noise", "yamux", "kad", "identify", "ping",
    "tokio", "ed25519", "serde", "macros",
    "relay", "autonat", "dcutr",
] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
