[package]
name = "pqnodium-app"
version = "0.1.0"
edition = "2021"
description = "PQNodium — Post-Quantum Decentralized Messaging (Tauri App)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pqnodium-core = { path = "../pqnodium-core" }
pqnodium-p2p = { path = "../pqnodium-p2p" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
